Feb2020 series base page changes

--- a/test-output/old/HubSpot App Regression Suite/reporter-output.html
+++ b/test-output/old/HubSpot App Regression Suite/reporter-output.html
@@ -1,2 +1,1 @@
-<h2>Reporter output</h2><table><tr><td><a href='C:\Santhoshbackup\selenium\Feb2020POMSeries\target\surefire-reports\failure_screenshots\verifySignUpLinkTest_30_04_2020_06_53_26.png'> <img src='C:\Santhoshbackup\selenium\Feb2020POMSeries\target\surefire-reports\failure_screenshots\verifySignUpLinkTest_30_04_2020_06_53_26.png' height='100' width='100'/> </a></td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
