--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-HubSpot_App_Regression_Suite">
-              <span class="suite-name border-failed">HubSpot App Regression Suite</span>
+              <span class="suite-name border-passed">HubSpot App Regression Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods, 1 failed,   5 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-HubSpot_App_Regression_Suite" class="hide-methods failed suite-HubSpot_App_Regression_Suite"> (hide)</a> <!-- hide-methods failed suite-HubSpot_App_Regression_Suite -->
-                      <a href="#" panel-name="suite-HubSpot_App_Regression_Suite" class="show-methods failed suite-HubSpot_App_Regression_Suite"> (show)</a> <!-- show-methods failed suite-HubSpot_App_Regression_Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-HubSpot_App_Regression_Suite">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-HubSpot_App_Regression_Suite" title="com.qa.hubspot.tests.LoginPageTest" hash-for-method="verifySignUpLinkTest">verifySignUpLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-HubSpot_App_Regression_Suite -->
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -136,6 +122,11 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-HubSpot_App_Regression_Suite" title="com.qa.hubspot.tests.LoginPageTest" hash-for-method="verifySignUpLinkTest">verifySignUpLinkTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-HubSpot_App_Regression_Suite" title="com.qa.hubspot.tests.LoginPageTest" hash-for-method="verifycheckloginSSOButtonTest">verifycheckloginSSOButtonTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -151,53 +142,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-HubSpot_App_Regression_Suite" class="panel HubSpot_App_Regression_Suite">
-          <div class="suite-HubSpot_App_Regression_Suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.qa.hubspot.tests.LoginPageTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifySignUpLinkTest">
-                  </a> <!-- verifySignUpLinkTest -->
-                  <span class="method-name">verifySignUpLinkTest</span>
-                  <div class="stack-trace">java.lang.AssertionError: singUp link is not present .... expected [true] but found [false]
-	at org.testng.Assert.fail(Assert.java:94)
-	at org.testng.Assert.failNotEquals(Assert.java:513)
-	at org.testng.Assert.assertTrue(Assert.java:42)
-	at com.qa.hubspot.tests.LoginPageTest.verifySignUpLinkTest(LoginPageTest.java:63)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:104)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:645)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:851)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1177)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:129)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:112)
-	at org.testng.TestRunner.privateRun(TestRunner.java:756)
-	at org.testng.TestRunner.run(TestRunner.java:610)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:387)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:382)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:340)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:289)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1293)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1218)
-	at org.testng.TestNG.runSuites(TestNG.java:1133)
-	at org.testng.TestNG.run(TestNG.java:1104)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:236)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:81)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-HubSpot_App_Regression_Suite-class-failed -->
           <div class="suite-HubSpot_App_Regression_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -230,6 +174,13 @@
                   <a name="verifyLoginPageTitleTest">
                   </a> <!-- verifyLoginPageTitleTest -->
                   <span class="method-name">verifyLoginPageTitleTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifySignUpLinkTest">
+                  </a> <!-- verifySignUpLinkTest -->
+                  <span class="method-name">verifySignUpLinkTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -300,27 +251,27 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'com.qa.hubspot.tests.LoginPageTest')
-data.setCell(0, 3, 12631);
+data.setCell(0, 3, 12784);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLoginPageTitleTest')
+data.setCell(1, 1, 'verifySignUpLinkTest')
 data.setCell(1, 2, 'com.qa.hubspot.tests.LoginPageTest')
-data.setCell(1, 3, 232);
+data.setCell(1, 3, 691);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifShowPasswordLinkTest')
+data.setCell(2, 1, 'verifyLoginPageTitleTest')
 data.setCell(2, 2, 'com.qa.hubspot.tests.LoginPageTest')
-data.setCell(2, 3, 157);
+data.setCell(2, 3, 217);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyForgotPasswordTest')
+data.setCell(3, 1, 'verifShowPasswordLinkTest')
 data.setCell(3, 2, 'com.qa.hubspot.tests.LoginPageTest')
-data.setCell(3, 3, 71);
+data.setCell(3, 3, 54);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifySignUpLinkTest')
+data.setCell(4, 1, 'verifyForgotPasswordTest')
 data.setCell(4, 2, 'com.qa.hubspot.tests.LoginPageTest')
-data.setCell(4, 3, 64);
+data.setCell(4, 3, 46);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'verifycheckloginSSOButtonTest')
 data.setCell(5, 2, 'com.qa.hubspot.tests.LoginPageTest')
-data.setCell(5, 3, 51);
+data.setCell(5, 3, 35);
 window.suiteTableData['HubSpot_App_Regression_Suite']= { tableData: data, tableDiv: 'times-div-HubSpot_App_Regression_Suite'}
 return data;
 }
@@ -336,12 +287,6 @@ return data;
             <span class="header-content">Reporter output for HubSpot App Regression Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">verifySignUpLinkTest</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output"><a href='C:\Santhoshbackup\selenium\Feb2020POMSeries\target\surefire-reports\failure_screenshots\verifySignUpLinkTest_30_04_2020_06_53_26.png'> <img src='C:\Santhoshbackup\selenium\Feb2020POMSeries\target\surefire-reports\failure_screenshots\verifySignUpLinkTest_30_04_2020_06_53_26.png' height='100' width='100'/> </a></span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-HubSpot_App_Regression_Suite" class="panel">
@@ -364,33 +309,31 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginPageTitleTest</span>
-                <span class="method-start">17443 ms</span>
+                <span class="method-start">15696 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">verifySignUpLinkTest</span>
-                <span class="method-start">17974 ms</span>
+                <span class="method-start">16103 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifShowPasswordLinkTest</span>
-                <span class="method-start">18787 ms</span>
+                <span class="method-start">16803 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyForgotPasswordTest</span>
-                <span class="method-start">18948 ms</span>
+                <span class="method-start">16861 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifycheckloginSSOButtonTest</span>
-                <span class="method-start">19024 ms</span>
+                <span class="method-start">16911 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginTest</span>
-                <span class="method-start">19080 ms</span>
+                <span class="method-start">16949 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">31716 ms</span>
+                <span class="method-start">29736 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
