--- a/test-output/old/HubSpot App Regression Suite/methods-alphabetical.html
+++ b/test-output/old/HubSpot App Regression Suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>HubSpot App Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3f9bd">  <td>20/04/30 06:53:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:6, instance:com.qa.hubspot.tests.LoginPageTest@2a39fe6a]">loginTest</td> 
-  <td>main@156199931</td>   <td></td> </tr>
-<tr bgcolor="b3f9bd">  <td>20/04/30 06:53:08</td>   <td>-19068</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a39fe6a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@156199931</td>   <td></td> </tr>
-<tr bgcolor="b3f9bd">  <td>20/04/30 06:53:40</td>   <td>12636</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a39fe6a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@156199931</td>   <td></td> </tr>
-<tr bgcolor="b3f9bd">  <td>20/04/30 06:53:27</td>   <td>-293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifShowPasswordLinkTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@2a39fe6a]">verifShowPasswordLinkTest</td> 
-  <td>main@156199931</td>   <td></td> </tr>
-<tr bgcolor="b3f9bd">  <td>20/04/30 06:53:27</td>   <td>-132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyForgotPasswordTest()[pri:4, instance:com.qa.hubspot.tests.LoginPageTest@2a39fe6a]">verifyForgotPasswordTest</td> 
-  <td>main@156199931</td>   <td></td> </tr>
-<tr bgcolor="b3f9bd">  <td>20/04/30 06:53:26</td>   <td>-1637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@2a39fe6a]">verifyLoginPageTitleTest</td> 
-  <td>main@156199931</td>   <td></td> </tr>
-<tr bgcolor="b3f9bd">  <td>20/04/30 06:53:26</td>   <td>-1106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@2a39fe6a]">verifySignUpLinkTest</td> 
-  <td>main@156199931</td>   <td></td> </tr>
-<tr bgcolor="b3f9bd">  <td>20/04/30 06:53:27</td>   <td>-56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifycheckloginSSOButtonTest()[pri:5, instance:com.qa.hubspot.tests.LoginPageTest@2a39fe6a]">verifycheckloginSSOButtonTest</td> 
-  <td>main@156199931</td>   <td></td> </tr>
+<tr bgcolor="a4848b">  <td>20/05/03 09:28:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:6, instance:com.qa.hubspot.tests.LoginPageTest@52b56a3e]">loginTest</td> 
+  <td>main@261650860</td>   <td></td> </tr>
+<tr bgcolor="a4848b">  <td>20/05/03 09:28:11</td>   <td>-16935</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@52b56a3e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@261650860</td>   <td></td> </tr>
+<tr bgcolor="a4848b">  <td>20/05/03 09:28:41</td>   <td>12787</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@52b56a3e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@261650860</td>   <td></td> </tr>
+<tr bgcolor="a4848b">  <td>20/05/03 09:28:28</td>   <td>-146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifShowPasswordLinkTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@52b56a3e]">verifShowPasswordLinkTest</td> 
+  <td>main@261650860</td>   <td></td> </tr>
+<tr bgcolor="a4848b">  <td>20/05/03 09:28:28</td>   <td>-88</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyForgotPasswordTest()[pri:4, instance:com.qa.hubspot.tests.LoginPageTest@52b56a3e]">verifyForgotPasswordTest</td> 
+  <td>main@261650860</td>   <td></td> </tr>
+<tr bgcolor="a4848b">  <td>20/05/03 09:28:27</td>   <td>-1253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@52b56a3e]">verifyLoginPageTitleTest</td> 
+  <td>main@261650860</td>   <td></td> </tr>
+<tr bgcolor="a4848b">  <td>20/05/03 09:28:27</td>   <td>-846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@52b56a3e]">verifySignUpLinkTest</td> 
+  <td>main@261650860</td>   <td></td> </tr>
+<tr bgcolor="a4848b">  <td>20/05/03 09:28:28</td>   <td>-38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifycheckloginSSOButtonTest()[pri:5, instance:com.qa.hubspot.tests.LoginPageTest@52b56a3e]">verifycheckloginSSOButtonTest</td> 
+  <td>main@261650860</td>   <td></td> </tr>
 </table>
